Adcionando imagem de perfil, modelando posição e tamanho.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     
-    <div id="container"></div>
+    <div id="container">
+        <div id="profile">
+            <img src="assets\avatar.png" alt="Foto de perfil, pessoa sorrindo utilizando ocuolos e camisa preta
+            e fundo azul.">
+        </div>
+    </div>
 
 
 </body>
