Adjust background images

--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Link ME</title>
     <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
-    
     <div id="container">
         <div id="profile">
             <img src="assets\avatar.png" alt="Foto de perfil, pessoa sorrindo utilizando ocuolos e camisa preta
@@ -29,15 +28,15 @@
         </div>
         <ul>
             <li>
-                <a href="#">Inscrever-se no NLW</a>
+                <a href="https://wa.me/5531971332110">Converse comigo!</a>
             </li>
 
             <li>
-                <a href="#">Baixar meu ebook</a>
+                <a href="https://www.instagram.com/italogax/" target="_blank">Meu Instagram</a>
             </li>
 
             <li>
-                <a href="#">Ver meu portifólio</a>
+                <a href="https://github.com/italogax" target="_blank">Ver meu portifólio</a>
             </li>
 
             <li>
